src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Account)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BJB_Company__c</fullName>
        <label>BJB Company</label>
        <picklist>
            <picklistValues>
                <fullName>SponsoredLinX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SponsoredLinX NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GetMoreTraffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GetMoreTraffic NZ</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From_Form__c</fullName>
        <label>From Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Source__c</fullName>
        <description>Used to track where the lead source came from</description>
        <label>From Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <label>GCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP__c</fullName>
        <label>IP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Mobile__c</fullName>
        <description>NewVoiceMedia click to dial Mobile Phone</description>
        <formula>IF( 
        LEN( MobilePhone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(MobilePhone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Lead&quot;, 
                   MobilePhone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Mobile Phone</inlineHelpText>
        <label>NVM Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Phone</description>
        <formula>IF( 
        LEN( Phone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(Phone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Lead&quot;, 
                   Phone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Phone</inlineHelpText>
        <label>NVM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Notes__c</fullName>
        <label>Sales Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email__c</fullName>
        <label>Sales Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>User_Agent__c</fullName>
        <label>User Agent</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>leadcap__Facebook_Lead_ID__c</fullName>
        <externalId>true</externalId>
        <label>Facebook Lead ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>GMT</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>Sales_Notes__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>SFGA__Web_Source__c</columns>
        <columns>pi__score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Mitchell Cochrane</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Follow Up,Contacted,Qualified</value>
        </filters>
        <label>GMT - Mitchell</label>
        <sharedTo>
            <role>GMTSales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GMT_Alec</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Assigned_To__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Sales_Notes__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>SFGA__Web_Source__c</columns>
        <columns>pi__score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>archer</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Follow Up,Contacted,Qualified</value>
        </filters>
        <label>GMT - Maddie</label>
        <sharedTo>
            <role>GMTSales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GMT_Alexandria</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Assigned_To__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Sales_Notes__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>SFGA__Web_Source__c</columns>
        <columns>pi__score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Alexandria Laffan</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Follow Up,Contacted,Qualified</value>
        </filters>
        <label>GMT - Alexandria</label>
        <sharedTo>
            <role>GMTSales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GMT_Ben</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Assigned_To__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>Sales_Notes__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>SFGA__Web_Source__c</columns>
        <columns>pi__score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Ben White</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Follow Up,Contacted,Qualified</value>
        </filters>
        <label>GMT - Ben</label>
        <sharedTo>
            <role>GMTSales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GMT_Christie</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Assigned_To__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Sales_Notes__c</columns>
        <columns>LEAD.LAST_TRANSFER</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>SFGA__Web_Source__c</columns>
        <columns>pi__score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Christie Barber</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Follow Up,Contacted,Qualified</value>
        </filters>
        <label>GMT - Christie</label>
        <sharedTo>
            <role>GMTSales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GMT_Coel</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Assigned_To__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Sales_Notes__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>SFGA__Web_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Coel Carmody</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Follow Up,Contacted,Qualified</value>
        </filters>
        <label>GMT - zzz</label>
        <sharedTo>
            <role>GMTSales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GMT_Connor</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Assigned_To__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Sales_Notes__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>SFGA__Web_Source__c</columns>
        <columns>pi__score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Connor Broadfoot</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Follow Up,Contacted,Qualified</value>
        </filters>
        <label>GMT - Connor</label>
        <sharedTo>
            <role>GMTSales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GMT_Ella</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Assigned_To__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Sales_Notes__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>SFGA__Web_Source__c</columns>
        <columns>pi__score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Ella Humbry</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Follow Up,Contacted,Qualified</value>
        </filters>
        <label>GMT - Ella</label>
        <sharedTo>
            <role>GMTSales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GMT_Emma</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Assigned_To__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Sales_Notes__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>SFGA__Web_Source__c</columns>
        <columns>pi__score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Emma Felton</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Follow Up,Contacted,Qualified</value>
        </filters>
        <label>GMT - Emma</label>
        <sharedTo>
            <role>GMTSales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GMT_Garry</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Assigned_To__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Sales_Notes__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>SFGA__Web_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Garry Jamieson</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Follow Up,Contacted,Qualified</value>
        </filters>
        <label>GMT - zzzz</label>
        <sharedTo>
            <role>GMTSales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GMT_Gemma</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Assigned_To__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Sales_Notes__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>SFGA__Web_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>gemma</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Follow Up,Contacted,Qualified</value>
        </filters>
        <label>GMT - zzzzz</label>
        <sharedTo>
            <role>GMTSales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GMT_Gordie</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Assigned_To__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Sales_Notes__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>SFGA__Web_Source__c</columns>
        <columns>pi__score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Gordie Lynton</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Follow Up,Contacted,Qualified</value>
        </filters>
        <label>GMT - Gordie</label>
        <sharedTo>
            <role>GMTSales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GMT_James</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Assigned_To__c</columns>
        <columns>Sales_Notes__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>SFGA__Web_Source__c</columns>
        <columns>pi__score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>James Chapman</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Follow Up,Contacted,Qualified</value>
        </filters>
        <label>GMT - James</label>
        <sharedTo>
            <role>GMTSales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GMT_Jamie</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Assigned_To__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Sales_Notes__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>SFGA__Web_Source__c</columns>
        <columns>pi__score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Jamie Walls-Boller</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Follow Up,Contacted,Qualified</value>
        </filters>
        <label>GMT - Jamie</label>
        <sharedTo>
            <role>GMTSales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GMT_Julianne</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Assigned_To__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Sales_Notes__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>SFGA__Web_Source__c</columns>
        <columns>pi__score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Julianne Adams</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Follow Up,Contacted,Qualified</value>
        </filters>
        <label>GMT - Julianne</label>
        <sharedTo>
            <role>GMTSales</role>
        </sharedTo>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>